* Sun Aug 7 2011 Thunor <thunorsif@hotmail.com>
- Fixed a bug I added to the pixmap widget that caused a segfault.

* Sat Aug 6 2011 Thunor <thunorsif@hotmail.com>
- Added theme icon support to the pixmap widget: the height or width
  directives can be used to specify the "size" else it defaults to 32.
- Tweaked the new widget template somewhat.
- Renamed main.c to gtkdialog.c and main.h to gtkdialog.h.
- Updated the button widget to support using the height or width
  directives to override the default theme icon size of 20.

* Fri Aug 5 2011 Thunor <thunorsif@hotmail.com>
- Updated the old TODO although I'm using the issue tracker myself.
- Added widget_pixmap.c/h, the start of my refactoring intentions.
- Fixed examples 09.00-tree, 09.12-tree_one_column including list.sh.
- Added widget_comboboxtext.c/h.

* Mon Aug 1 2011 Thunor <thunorsif@hotmail.com>
- The overhaul of the menu system is now complete. New checkbox,
  radiobutton and image from file menuitem widgets added and refresh and
  save action functions implemented.

* Sun Jul 31 2011 Thunor <thunorsif@hotmail.com>
- Discovered that the menuitems aren't realized until the menu is opened
  which means that using gtk_widget_get_realized is pointless. I've now
  replaced that within the refresh functions with an item of widget data
  named "initialised" which marks the widgets at start-up. I believe
  this is also going to be an issue with the notebook widget so the
  on_any_widget_realized method of setting tag attributes is going to
  require changing else properties won't be set until widgets get shown
  and an action function could have changed them in that time.
- Re-engineered the "block-function-signals" code so that I don't have
  to micro-manage signal handler IDs. Instead I set a global flag which
  blocks execute_action from executing any action functions. The check
  for "block-function-signals" is now done not within specific widget